--- a/k8s-master/Vagrantfile
+++ b/k8s-master/Vagrantfile
@@ -5,13 +5,13 @@
 require 'yaml'
 
 current_dir    = File.dirname(File.expand_path(__FILE__))
-vagrant_config = YAML.load_file("#{current_dir}/config.yaml")
+vagrant_config = YAML.load_file("#{current_dir}/../common/config.yaml")
 
 Vagrant.configure(2) do |config|
 
   config.vm.box = "JoSSte/lamp"
   config.vm.box_version = "2.0.2"
-  config.vm.define "k8s-master"
+  config.vm.define vagrant_config['master']['server_name']
 
   config.vm.network 'private_network', ip: vagrant_config['master']['public_ip']
 
@@ -21,17 +21,17 @@ Vagrant.configure(2) do |config|
   # configure virtualbox settings
   # https://www.vagrantup.com/docs/providers/virtualbox/configuration
   config.vm.provider "virtualbox" do |vb|
-    vb.memory = "1024"
+    vb.memory = "2048"
     
   end
 
   #config.vbguest.auto_update = false
 
-  config.vm.post_up_message = "Talentcloud development environment with apache and Modsecurity.\nTo get started visit http://"+vagrant_config['master']['public_ip']+".nip.io or http://"+vagrant_config['server_name']+" if you have set up you hosts file\nModSecurity Logs: sudo tail -f /var/log/apache2/modsec_audit.log\ndefault admin user is 'admin'/'secret'"
+  # config.vm.post_up_message = ""
 
   # https://github.com/agiledivider/vagrant-hostsupdater
   if Vagrant.has_plugin?("vagrant-hostsupdater")  
-    config.hostsupdater.aliases = [vagrant_config['server_name']]
+    config.hostsupdater.aliases = [vagrant_config['master']['server_name']]
   end
 
   if Vagrant.has_plugin?("vagrant-cachier")
