--- a/k8s-master/Vagrantfile
+++ b/k8s-master/Vagrantfile
@@ -9,8 +9,7 @@ vagrant_config = YAML.load_file("#{current_dir}/../common/config.yaml")
 
 Vagrant.configure(2) do |config|
 
-  config.vm.box = "JoSSte/lamp"
-  config.vm.box_version = "2.0.2"
+  config.vm.box = "ubuntu/jammy64"
   config.vm.define vagrant_config['master']['server_name']
 
   config.vm.network 'private_network', ip: vagrant_config['master']['public_ip']
@@ -60,12 +59,12 @@ Vagrant.configure(2) do |config|
       "IP_ADDR"     => vagrant_config['master']['public_ip']
     }
     config.vm.provision :shell, inline: "ip addr"
-
-  # configure k8s master setup
-  config.vm.provision :shell, path: "../common/scripts/k8s-master.sh", 
-    :env => {
-      "SERVER_NAME" => vagrant_config['master']['server_name'],
-      "IP_ADDR"     => vagrant_config['master']['public_ip']
-    }
-    config.vm.provision :shell, inline: "ip addr"
+#
+#  # configure k8s master setup
+#  config.vm.provision :shell, path: "../common/scripts/k8s-master.sh", 
+#    :env => {
+#      "SERVER_NAME" => vagrant_config['master']['server_name'],
+#      "IP_ADDR"     => vagrant_config['master']['public_ip']
+#    }
+#    config.vm.provision :shell, inline: "ip addr"
 end
